se actualiza documentación

--- a/documentation/components/CategoriaComponent.html
+++ b/documentation/components/CategoriaComponent.html
@@ -294,7 +294,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">src/app/pages/categoria/categoria.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">src/app/pages/categoria/categoria.ts:63</a></div>
                             </td>
                         </tr>
 
@@ -400,8 +400,8 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="105"
-                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:105</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="112"
+                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:112</a></div>
                         </td>
                     </tr>
 
@@ -432,15 +432,15 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>agregarProducto(p: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
+<code>agregarProducto(p: <a href="../interfaces/Producto.html" target="_self">Producto</a>)</code>
                 </td>
             </tr>
 
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="114"
-                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:114</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="121"
+                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:121</a></div>
                         </td>
                     </tr>
 
@@ -466,7 +466,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                                         <tr>
                                                 <td>p</td>
                                             <td>
-                                                            <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                                            <code><a href="../interfaces/Producto.html" target="_self" >Producto</a></code>
                                             </td>
 
                                             <td>
@@ -513,8 +513,8 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="72"
-                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:72</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="79"
+                                    class="link-to-prism">src/app/pages/categoria/categoria.ts:79</a></div>
                         </td>
                     </tr>
 
@@ -558,7 +558,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <i>Type : </i>        <code><a href="../interfaces/Categoria.html" target="_self" >Categoria | null</a></code>
 
                     </td>
                 </tr>
@@ -569,7 +569,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/app/pages/categoria/categoria.ts:49</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/app/pages/categoria/categoria.ts:55</a></div>
                         </td>
                     </tr>
 
@@ -595,7 +595,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <i>Type : </i>    <code>literal type</code>
 
                     </td>
                 </tr>
@@ -606,7 +606,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/pages/categoria/categoria.ts:37</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/pages/categoria/categoria.ts:41</a></div>
                         </td>
                     </tr>
 
@@ -632,7 +632,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>any[]</code>
+                        <i>Type : </i>        <code><a href="../interfaces/Producto.html" target="_self" >Producto[]</a></code>
 
                     </td>
                 </tr>
@@ -643,7 +643,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/pages/categoria/categoria.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/pages/categoria/categoria.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -669,7 +669,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>any[]</code>
+                        <i>Type : </i>        <code><a href="../interfaces/Producto.html" target="_self" >Producto[]</a></code>
 
                     </td>
                 </tr>
@@ -680,7 +680,7 @@ desde archivos JSON locales, y los filtra dinámicamente según el <code>slug</c
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">src/app/pages/categoria/categoria.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">src/app/pages/categoria/categoria.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -713,7 +713,7 @@ Se limita a 3 productos como máximo.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/pages/categoria/categoria.ts:31</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/pages/categoria/categoria.ts:34</a></div>
                         </td>
                     </tr>
 
@@ -738,6 +738,9 @@ import { ActivatedRoute, RouterLink } from &#x27;@angular/router&#x27;;
 import { CommonModule } from &#x27;@angular/common&#x27;;
 import { Cart } from &#x27;../../core/cart&#x27;;
 import { JsonService } from &#x27;../../services/json&#x27;;
+import { Categoria } from &#x27;../../models/categoria&#x27;;
+import { Producto } from &#x27;../../models/producto&#x27;;
+
 
 /**
  * @description
@@ -769,26 +772,30 @@ export class CategoriaComponent implements OnInit {
    * Metadatos de todas las categorías, cargados desde &#x60;categorias.json&#x60;.
    * @type {{ [key: string]: { titulo: string, subtitulo: string } }}
    */
-  categoriasData: any &#x3D; {};
+  // categoriasData: any &#x3D; {};
+  categoriasData: { [key: string]: Categoria } &#x3D; {};
 
   /**
    * Lista completa de productos, cargada desde &#x60;productos.json&#x60;.
    * @type {any[]}
    */
-  productos: any[] &#x3D; [];
+  //productos: any[] &#x3D; [];
+  productos: Producto[] &#x3D; [];
 
   /**
    * Categoría actualmente activa según &#x60;slug&#x60;. Es &#x60;null&#x60; si no coincide con &#x60;categoriasData&#x60;.
    * @type {{ titulo: string, subtitulo: string } | null}
    */
-  categoriaActual: any &#x3D; null;
+  //categoriaActual: any &#x3D; null;
+  categoriaActual: Categoria | null &#x3D; null;
 
   /**
    * Lista de productos que pertenecen a la categoría actual.
    * Se limita a 3 productos como máximo.
    * @type {any[]}
    */
-  productosFiltrados: any[] &#x3D; [];
+  // productosFiltrados: any[] &#x3D; [];
+  productosFiltrados: Producto[] &#x3D; [];
 
   /**
    * Inyecta dependencias necesarias.
@@ -846,7 +853,7 @@ export class CategoriaComponent implements OnInit {
    * @param p Producto a agregar al carrito.
    * @returns {void}
    */
-  agregarProducto(p: any): void {
+  agregarProducto(p: Producto): void {
     this.cart.agregar({
       id: p.id,
       nombre: p.nombre,
