--- a/documentation/components/FooterComponent.html
+++ b/documentation/components/FooterComponent.html
@@ -238,6 +238,9 @@ Obtiene el tipo de cambio desde una API externa usando el servicio <code>Json</c
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
+                                <a href="#isLoading" >isLoading</a>
+                            </li>
+                            <li>
                                 <a href="#valorDolar" >valorDolar</a>
                             </li>
                         </ul>
@@ -278,7 +281,7 @@ Obtiene el tipo de cambio desde una API externa usando el servicio <code>Json</c
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/shared/footer/footer.ts:40</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/shared/footer/footer.ts:46</a></div>
                             </td>
                         </tr>
 
@@ -352,8 +355,8 @@ Obtiene el tipo de cambio desde una API externa usando el servicio <code>Json</c
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="54"
-                                    class="link-to-prism">src/app/shared/footer/footer.ts:54</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="60"
+                                    class="link-to-prism">src/app/shared/footer/footer.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -385,6 +388,43 @@ El valor se guarda en <code>valorDolar</code>. Si ocurre un error, se asigna <co
         <tbody>
             <tr>
                 <td class="col-md-4">
+                    <a name="isLoading"></a>
+                    <span class="name">
+                        <span ><b>isLoading</b></span>
+                        <a href="#isLoading"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>true</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/shared/footer/footer.ts:46</a></div>
+                        </td>
+                    </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Variable que permite  indentificar si se termino de cargar para el manejo visual de loading</p>
+</div>
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
                     <a name="valorDolar"></a>
                     <span class="name">
                         <span ><b>valorDolar</b></span>
@@ -405,7 +445,7 @@ El valor se guarda en <code>valorDolar</code>. Si ocurre un error, se asigna <co
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/shared/footer/footer.ts:40</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/shared/footer/footer.ts:41</a></div>
                         </td>
                     </tr>
 
@@ -429,6 +469,7 @@ Es <code>null</code> mientras no se haya cargado o si ocurre un error.</p>
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
 import { CommonModule } from &#x27;@angular/common&#x27;;
 import { JsonService } from &#x27;../../services/json&#x27;;
+import { ExchangeRateResponse } from &#x27;../../models/exchange-rate&#x27;;
 
 /**
  * 
@@ -468,6 +509,11 @@ export class FooterComponent implements OnInit {
   valorDolar: number | null &#x3D; null;
 
   /**
+   * Variable que permite  indentificar si se termino de cargar para el manejo visual de loading
+  */
+  isLoading: boolean &#x3D; true; // Estado de carga
+
+  /**
    * Crea una instancia del componente e inyecta el servicio &#x60;Json&#x60;.
    *
    * @param jsonService Servicio inyectado que maneja la llamada HTTP a la API real.
@@ -481,12 +527,18 @@ export class FooterComponent implements OnInit {
    */
   ngOnInit(): void {
     this.jsonService.getCambioDolar().subscribe({
-      next: (data) &#x3D;&gt; {
-        this.valorDolar &#x3D; data?.rates?.CLP ?? null;
+      next: (data: ExchangeRateResponse | null) &#x3D;&gt; {
+        // Acceso correcto usando corchetes
+        setTimeout(() &#x3D;&gt; {
+          // ⚠️ Solo para ver el spinner por unos segundos
+          this.valorDolar &#x3D; data?.rates?.[&#x27;CLP&#x27;] ?? null;
+        }, 2000); // 2 segundos de demora artificial
+        this.isLoading &#x3D; false; // Datos cargados, ocultamos el loading
       },
-      error: (err) &#x3D;&gt; {
+      error: (err: any) &#x3D;&gt; {
         console.error(&#x27;Error al obtener tipo de cambio&#x27;, err);
         this.valorDolar &#x3D; null;
+        this.isLoading &#x3D; false; // Datos cargados, ocultamos el loading
       },
     });
   }
@@ -499,14 +551,27 @@ export class FooterComponent implements OnInit {
   role&#x3D;&quot;contentinfo&quot;
   aria-label&#x3D;&quot;Pie de página del sitio&quot;
 &gt;
-  &lt;p class&#x3D;&quot;mb-0&quot;&gt;© 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.&lt;/p&gt;
-  &lt;p class&#x3D;&quot;mt-2&quot; *ngIf&#x3D;&quot;valorDolar !&#x3D;&#x3D; null; else cargando&quot;&gt;
-    Tipo de cambio USD → CLP: {{ valorDolar }}
+  &lt;p class&#x3D;&quot;mb-0&quot;&gt;
+    © 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.
   &lt;/p&gt;
 
-  &lt;ng-template #cargando&gt;
-    &lt;p class&#x3D;&quot;mt-2&quot;&gt;Cargando tipo de cambio...&lt;/p&gt;
-  &lt;/ng-template&gt;
+  &lt;div class&#x3D;&quot;mt-2&quot; *ngIf&#x3D;&quot;valorDolar !&#x3D;&#x3D; null; else cargando&quot;&gt;
+    &lt;strong&gt;Tipo de cambio USD → CLP:&lt;/strong&gt; {{ valorDolar }}
+  &lt;/div&gt;
+
+  &lt;!-- &lt;ng-template #cargando&gt;
+    &lt;div class&#x3D;&quot;mt-2 d-flex justify-content-center align-items-center flex-column&quot;&gt;
+      &lt;span class&#x3D;&quot;spinner-border spinner-border-sm mb-1&quot; role&#x3D;&quot;status&quot; aria-hidden&#x3D;&quot;true&quot;&gt;&lt;/span&gt;
+      &lt;p class&#x3D;&quot;mt-2 cargando&quot;&gt;Cargando tipo de cambio...&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/ng-template&gt; --&gt;
+
+&lt;ng-template #cargando&gt;
+  &lt;p class&#x3D;&quot;mt-2 d-inline-flex align-items-center loading-text&quot;&gt;
+    &lt;span class&#x3D;&quot;spinner&quot; aria-hidden&#x3D;&quot;true&quot;&gt;&lt;/span&gt;
+    &amp;nbsp;Cargando tipo de cambio...
+  &lt;/p&gt;
+&lt;/ng-template&gt;
 &lt;/footer&gt;
 </code></pre>
     </div>
@@ -515,7 +580,30 @@ export class FooterComponent implements OnInit {
                 <p class="comment">
                     <code>./footer.scss</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss"></code></pre>
+                <pre class="line-numbers"><code class="language-scss">.loading-text {
+  font-size: 0.95rem;
+
+  .spinner {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.4rem;
+    border: 2px solid #fff;
+    border-top: 2px solid transparent;
+    border-radius: 50%;
+    animation: girar 0.7s linear infinite;
+  }
+}
+
+@keyframes girar {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="tree">
@@ -543,7 +631,7 @@ export class FooterComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><footer  class="bg-primary text-white text-center py-3 mt-4"  role="contentinfo"  aria-label="Pie de página del sitio">  <p class="mb-0">© 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.</p>  <p class="mt-2" *ngIf="valorDolar !== null; else cargando">    Tipo de cambio USD → CLP: {{ valorDolar }}  </p>  <ng-template #cargando>    <p class="mt-2">Cargando tipo de cambio...</p>  </ng-template></footer></div>'
+        var COMPONENT_TEMPLATE = '<div><footer  class="bg-primary text-white text-center py-3 mt-4"  role="contentinfo"  aria-label="Pie de página del sitio">  <p class="mb-0">    © 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.  </p>  <div class="mt-2" *ngIf="valorDolar !== null; else cargando">    <strong>Tipo de cambio USD → CLP:</strong> {{ valorDolar }}  </div>  <!-- <ng-template #cargando>    <div class="mt-2 d-flex justify-content-center align-items-center flex-column">      <span class="spinner-border spinner-border-sm mb-1" role="status" aria-hidden="true"></span>      <p class="mt-2 cargando">Cargando tipo de cambio...</p>    </div>  </ng-template> --><ng-template #cargando>  <p class="mt-2 d-inline-flex align-items-center loading-text">    <span class="spinner" aria-hidden="true"></span>    &nbsp;Cargando tipo de cambio...  </p></ng-template></footer></div>'
     var COMPONENTS = [{'name': 'AdminComponent', 'selector': 'app-admin'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarritoComponent', 'selector': 'app-carrito'},{'name': 'CategoriaComponent', 'selector': 'app-categoria'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'PerfilComponent', 'selector': 'app-perfil'},{'name': 'RecuperarComponent', 'selector': 'app-recuperar'},{'name': 'RegistroComponent', 'selector': 'app-registro'},{'name': 'ToastComponent', 'selector': 'app-toast'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'FooterComponent'};
